--- a/src/main/resources/templates/administration/client/new.html
+++ b/src/main/resources/templates/administration/client/new.html
@@ -29,23 +29,21 @@
             <div class="row margin-vert-30">
 
                 <form data-bind="submit: save" th:object="${client}" th:action="@{/clients}" method="POST">
-                    <h3>Для того чтобы начать занятия с репетитором необходимо сначала зарегистрироваться.</h3>
-
+                    <div class="col-md-12 margin-bottom-20">
+                        <h3>Для того чтобы начать занятия с репетитором необходимо сначала зарегистрироваться.</h3>
+                    </div>
                     <div class="col-md-6">
                         <div th:replace="fragments/user_form :: user_form"></div>
-
-                        <div th:replace="fragments/login_form :: login_form"></div>
-
                     </div>
 
-                    <div th:replace="fragments/client/update:: update"></div>
-
                     <div class="col-md-6">
+                        <div th:replace="fragments/login_form :: login_form"></div>
+
+                        <div th:replace="fragments/client/update:: update"></div>
+
                         <hr/>
-                        <div class="row">
-                            <div class="col-lg-4 text-right">
-                                <button class="btn btn-primary" type="submit">Регистрация</button>
-                            </div>
+                        <div class="text-right">
+                            <button class="btn btn-primary" type="submit">Регистрация</button>
                         </div>
                     </div>
                 </form>
