--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -81,6 +81,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="row" th:if="${account}">
+                    <div class="col-lg-12 text-right">
+                        <a th:href="@{'/clients/' + *{id} + '/edit'}" class="btn btn-default">Редактировать данные</a>
+                    </div>
+                </div>
+
                 <hr/>
                 <div class="col-md-12">
                     <div th:each="relation : ${relations}">
@@ -111,7 +117,7 @@
                         <div class="col-md-11 margin-vert-30">
                             <h3 >
                                 История занятий
-                                <a th:href="@{'/relations/' + ${relation.id} + '/history'}">Просмотреть</a></h3>
+                                <a th:href="@{'/relations/' + ${relation.id} + '/history/list'}">Просмотреть</a></h3>
                         </div>
                         </div>
                         <div class="row">
