--- a/src/main/resources/templates/evaluation.html
+++ b/src/main/resources/templates/evaluation.html
@@ -56,7 +56,7 @@
                         материал</label>
                         <input class="form-control margin-bottom-20" type="text" th:field="*{explanations}"/>
 
-                        <input type="hidden" th:field="*{relation}"/>
+                        <input type="hidden" th:field="*{relation.id}"/>
 
                         <div class="row">
                             <div class="col-lg-2 text-right">
