--- a/src/main/resources/templates/fragments/login_form.html
+++ b/src/main/resources/templates/fragments/login_form.html
@@ -6,35 +6,33 @@
 </head>
 <body>
 <div th:fragment="login_form">
-    <div class="login-form">
-        <div class="signup-page right-block">
-            <div class="signup-header">
-                <h3>Email и пароль</h3>
-            </div>
-            <div class="row">
-                <label>Email
+    <div class="signup-page right-block">
+        <div class="signup-header">
+            <h3>Email и пароль</h3>
+        </div>
+        <div class="row">
+            <label>Email
+                <span class="color-red">*</span>
+                <!--<p>Email будет использоваться для входа в личный кабинет.</p>-->
+            </label>
+            <input class="form-control margin-bottom-20" type="text" th:field="*{user.email}"
+                   data-bind="value: email" maxlength="100"/>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <label>Пароль
                     <span class="color-red">*</span>
-                    <p>Email будет использоваться для входа в личный кабинет.</p>
                 </label>
-                <input class="form-control margin-bottom-20" type="text" th:field="*{user.email}"
-                       data-bind="value: email" maxlength="100"/>
+                <input class="form-control margin-bottom-20" type="password"
+                       th:field="*{user.password}"
+                       data-bind="value: password" maxlength="100"/>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <label>Пароль
-                        <span class="color-red">*</span>
-                    </label>
-                    <input class="form-control margin-bottom-20" type="password"
-                           th:field="*{user.password}"
-                           data-bind="value: password" maxlength="100"/>
-                </div>
-                <div class="col-sm-6">
-                    <label>Повторить пароль
-                        <span class="color-red">*</span>
-                    </label>
-                    <input class="form-control margin-bottom-20" type="password"
-                           data-bind="value: repeatpassword"/>
-                </div>
+            <div class="col-sm-6">
+                <label>Повторить пароль
+                    <span class="color-red">*</span>
+                </label>
+                <input class="form-control margin-bottom-20" type="password"
+                       data-bind="value: repeatpassword"/>
             </div>
         </div>
     </div>
