--- a/src/main/resources/templates/fragments/user_form.html
+++ b/src/main/resources/templates/fragments/user_form.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <div th:fragment="user_form">
-<div>
     <div class="signup-page">
         <div class="signup-header">
             <h3>Личные данные</h3>
@@ -68,13 +67,13 @@
             </label>
             <div>
                 <div th:each="gender : ${genders}">
-                    <input th:checked="*{user.gender}" type="checkbox" th:field="*{user.gender}" th:value="${gender.value}" />
+                    <input th:checked="*{user.gender}" type="checkbox" th:field="*{user.gender}"
+                           th:value="${gender.value}"/>
                     <label th:text="${gender.text}"></label>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
