--- a/src/main/resources/templates/history/new.html
+++ b/src/main/resources/templates/history/new.html
@@ -2,7 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
     <title>История занятий</title>
-    <meta charset="utf-8"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="favicon.ico" rel="shortcut icon"/>
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet"/>
@@ -19,40 +21,24 @@
     <div th:replace="fragments/header :: header"></div>
 
     <div th:replace="fragments/menu :: menu('tutors')"></div>
-
-    <div class="container">
+    <div id="content">
         <div class="container background-white">
             <div class="row margin-vert-30">
-        <h2>История занятий</h2>
-        <table class="table">
-            <thead>
-            <tr>
-                <!--<th>Репетитор</th>-->
-                <!--<th>Клиент</th>-->
-                <th>Дата</th>
-                <th>Домашнее задание</th>
-                <th>Пройденый материал</th>
-                <th>Оценка</th>
-                <th>Изменить</th>
-            </tr>
-            </thead>
-            <tbody th:each="h : ${history}">
-            <tr>
-                <!--<td><a th:href="@{'/tutors/' + ${h.relation.tutor.id}}">-->
-                    <!--<span th:text="${h.relation.tutor.user.getFullName()}"></span></a></td>-->
-                <!--<td><a th:href="@{'/clients/' + ${h.relation.client.id}}">-->
-                    <!--<span th:text="${h.relation.client.user.getFullName()}"></span></a></td>-->
-                <td th:text="${#dates.format(h.date, 'dd-MM-yyyy')}"></td>
-                <td th:text="${h.homework}"></td>
-                <td th:text="${h.completedMaterial}"></td>
-                <td th:text="${h.rating}"></td>
-                <td><a th:href="@{'/history/' + ${h.id}}">Изменить</a></td>
-            </tr>
-            </tbody>
-        </table>
-                </div></div>
+                <div class="col-md-8 col-md-offset-2 col-sm-offset-3">
+                    <div id="accordion" class="panel-group">
+                        <div class="panel-body">
+                            <div class="row">
+                                <form th:object="${history}"
+                                      th:action="@{'/history'}" method="POST">
+                                    <div th:replace="fragments/history/update :: update"></div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
     <div th:replace="fragments/footer :: contacts"></div>
 
     <div th:replace="fragments/footer :: footer"></div>
@@ -66,5 +52,6 @@
 <script th:src="@{/js/jquery.sticky.js}"/>
 <script th:src="@{/js/slimbox2.js}"/>
 <script th:src="@{/js/modernizr.custom.js}"/>
+
 </body>
 </html>
