--- a/src/main/resources/templates/administration/client/list.html
+++ b/src/main/resources/templates/administration/client/list.html
@@ -47,14 +47,14 @@
 
     <div th:replace="fragments/footer :: footer"></div>
 </div>
-<script th:src="@{/js/jquery.min.js}"/>
-<script th:src="@{/js/bootstrap.min.js}"/>
-<script th:src="@{/js/scripts.js}"/>
-<script th:src="@{/js/jquery.isotope.js}"/>
-<script th:src="@{/js/jquery.slicknav.js}"/>
-<script th:src="@{/js/jquery.visible.js}"/>
-<script th:src="@{/js/jquery.sticky.js}"/>
-<script th:src="@{/js/slimbox2.js}"/>
-<script th:src="@{/js/modernizr.custom.js}"/>
+<script th:src="@{/js/jquery/jquery.min.js}"/>
+<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/jquery/jquery.isotope.js}"/>
+<script th:src="@{/js/jquery/jquery.slicknav.js}"/>
+<script th:src="@{/js/jquery/jquery.visible.js}"/>
+<script th:src="@{/js/jquery/jquery.sticky.js}"/>
+<script th:src="@{/js//thirdparty/slimbox2.js}"/>
+<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
 </body>
 </html>
