--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -10,7 +10,7 @@
     <link th:href="@{/css/w/elements.css}" rel="stylesheet"/>
     <link th:href="@{/css/w/layout.css}" rel="stylesheet"/>
 
-    <script th:src="@{/js/jquery.min.js}"/>
+    <script th:src="@{/js/jquery/jquery.min.js}"/>
     <script th:src="@{/js/daypilot-all.min.js}" type="text/javascript"/>
 </head>
 <body>
