--- a/src/main/resources/templates/order/new.html
+++ b/src/main/resources/templates/order/new.html
@@ -21,26 +21,6 @@
     <div th:replace="fragments/header :: header"></div>
 
     <div th:replace="fragments/menu :: menu('tutors')"></div>
-    <!--<div class="container">-->
-    <!--<div class="container background-white">-->
-    <!--<div class="row margin-vert-30">-->
-    <!--<h2>Заказ</h2>-->
-    <!--<p>Пожалуйста опишите что Вы хотите от занятий, как часто Вы хотели бы их проводить и в какое время,-->
-    <!--какой цели Вы хотите достичь по итогам занятий. Сообщение будет отправлено репетитору и при его согласии-->
-    <!--он с вами свяжется в максимально короткое время.</p>-->
-    <!--<form th:action="@{'/tutors/' + ${id} + '/order'}" method="POST">-->
-
-    <!--<div class="row margin-bottom-20">-->
-    <!--<div class="col-md-8 col-md-offset-0">-->
-    <!--<textarea rows="8" class="form-control" name="message"></textarea>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-    <!--<button type="submit" class="btn btn-primary">Отправить</button>-->
-    <!--</div>-->
-    <!--</form>-->
-    <!--</div></div>-->
-    <!--</div>-->
 
     <div class="container">
         <div class="container background-white">
@@ -88,15 +68,15 @@
 
     <div th:replace="fragments/footer :: footer"></div>
 </div>
-<script th:src="@{/js/jquery.min.js}"/>
-<script th:src="@{/js/bootstrap.min.js}"/>
-<script th:src="@{/js/scripts.js}"/>
-<script th:src="@{/js/jquery.isotope.js}"/>
-<script th:src="@{/js/jquery.slicknav.js}"/>
-<script th:src="@{/js/jquery.visible.js}"/>
-<script th:src="@{/js/jquery.sticky.js}"/>
-<script th:src="@{/js/slimbox2.js}"/>
-<script th:src="@{/js/modernizr.custom.js}"/>
+<script th:src="@{/js/jquery/jquery.min.js}"/>
+<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/jquery/jquery.isotope.js}"/>
+<script th:src="@{/js/jquery/jquery.slicknav.js}"/>
+<script th:src="@{/js/jquery/jquery.visible.js}"/>
+<script th:src="@{/js/jquery/jquery.sticky.js}"/>
+<script th:src="@{/js//thirdparty/slimbox2.js}"/>
+<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
 
 </body>
 </html>
