--- a/src/main/resources/templates/tutor/edit.html
+++ b/src/main/resources/templates/tutor/edit.html
@@ -58,23 +58,23 @@
 
     <div th:replace="fragments/footer :: footer"></div>
 </div>
-<script th:src="@{/js/jquery.min.js}"/>
-<script th:src="@{/js/jquery-ui.min.js}"/>
-<script th:src="@{/js/moment.min.js}"/>
-<script th:src="@{/js/bootstrap.min.js}"/>
-<script th:src="@{/js/scripts.js}"/>
-<script th:src="@{/js/jquery.isotope.js}"/>
-<script th:src="@{/js/jquery.slicknav.js}"/>
-<script th:src="@{/js/jquery.visible.js}"/>
-<script th:src="@{/js/jquery.sticky.js}"/>
-<script th:src="@{/js/slimbox2.js}"/>
-<script th:src="@{/js/modernizr.custom.js}"/>
+<script th:src="@{/js/jquery/jquery.min.js}"/>
+<script th:src="@{/js/jquery/jquery-ui.min.js}"/>
+<script th:src="@{/js//thirdparty/moment.min.js}"/>
+<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/jquery/jquery.isotope.js}"/>
+<script th:src="@{/js/jquery/jquery.slicknav.js}"/>
+<script th:src="@{/js/jquery/jquery.visible.js}"/>
+<script th:src="@{/js/jquery/jquery.sticky.js}"/>
+<script th:src="@{/js//thirdparty/slimbox2.js}"/>
+<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
 
-<script th:src="@{/js/jquery.inputmask.bundle.min.js}"/>
+<script th:src="@{/js/jquery/jquery.inputmask.bundle.min.js}"/>
 <script th:src="@{/js/knockout/knockout.js}"/>
 <script th:src="@{/js/knockout/knockout.inputmask.js}"/>
-<script th:src="@{/js/knockout/knockout-validation-min.js}"/>
-<script th:src="@{/js/datepicker-ru.js}"/>
+<script th:src="@{/js/knockout/validation/knockout-validation-min.js}"/>
+<script th:src="@{/js//thirdparty/datepicker-ru.js}"/>
 <script th:src="@{/js/tutor.js}"/>
 <script th:src="@{/js/knockout.validation.rules.js}"/>
 <script th:src="@{/js/knockout/knockout.datepicker.js}"/>
