--- a/src/main/resources/templates/client/edit.html
+++ b/src/main/resources/templates/client/edit.html
@@ -58,21 +58,21 @@
 <div th:replace="fragments/footer :: footer"></div>
 <script th:src="@{/js/jquery/jquery.min.js}"/>
 <script th:src="@{/js/jquery/jquery-ui.min.js}"/>
-<script th:src="@{/js//thirdparty/moment.min.js}"/>
-<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
-<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/thirdparty/moment.min.js}"/>
+<script th:src="@{/js/bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js/thirdparty/scripts.js}"/>
 <script th:src="@{/js/jquery/jquery.isotope.js}"/>
 <script th:src="@{/js/jquery/jquery.slicknav.js}"/>
 <script th:src="@{/js/jquery/jquery.visible.js}"/>
 <script th:src="@{/js/jquery/jquery.sticky.js}"/>
-<script th:src="@{/js//thirdparty/slimbox2.js}"/>
-<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
+<script th:src="@{/js/thirdparty/slimbox2.js}"/>
+<script th:src="@{/js/thirdparty/modernizr.custom.js}"/>
 
 <script th:src="@{/js/jquery/jquery.inputmask.bundle.min.js}"/>
 <script th:src="@{/js/knockout/knockout.js}"/>
 <script th:src="@{/js/knockout/knockout.inputmask.js}"/>
 <script th:src="@{/js/knockout/validation/knockout-validation-min.js}"/>
-<script th:src="@{/js//thirdparty/datepicker-ru.js}"/>
+<script th:src="@{/js/thirdparty/datepicker-ru.js}"/>
 <script th:src="@{/js/client.js}"/>
 <script th:src="@{/js/knockout.validation.rules.js}"/>
 <script th:src="@{/js/knockout/knockout.datepicker.js}"/>
