--- a/src/main/resources/templates/administration/user/new.html
+++ b/src/main/resources/templates/administration/user/new.html
@@ -154,21 +154,21 @@
 </div>
 <script th:src="@{/js/jquery/jquery.min.js}"/>
 <script th:src="@{/js/jquery/jquery-ui.min.js}"/>
-<script th:src="@{/js//thirdparty/moment.min.js}"/>
-<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
-<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/thirdparty/moment.min.js}"/>
+<script th:src="@{/js/bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js/thirdparty/scripts.js}"/>
 <script th:src="@{/js/jquery/jquery.isotope.js}"/>
 <script th:src="@{/js/jquery/jquery.slicknav.js}"/>
 <script th:src="@{/js/jquery/jquery.visible.js}"/>
 <script th:src="@{/js/jquery/jquery.sticky.js}"/>
-<script th:src="@{/js//thirdparty/slimbox2.js}"/>
-<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
+<script th:src="@{/js/thirdparty/slimbox2.js}"/>
+<script th:src="@{/js/thirdparty/modernizr.custom.js}"/>
 <script th:src="@{/js/jquery/jquery.inputmask.bundle.min.js}"/>
 <script th:src="@{/js/knockout/knockout.js}"/>
 <script th:src="@{/js/knockout/knockout.inputmask.js}"/>
 
 <script th:src="@{/js/knockout/validation/knockout-validation-min.js}"/>
-<script th:src="@{/js//thirdparty/datepicker-ru.js}"/>
+<script th:src="@{/js/thirdparty/datepicker-ru.js}"/>
 
 <script th:src="@{/js/user.js}"/>
 <script th:src="@{/js/knockout.validation.rules.js}"/>
