--- a/src/main/resources/templates/order/approved.html
+++ b/src/main/resources/templates/order/approved.html
@@ -46,13 +46,13 @@
     </div>
 </div>
 <script th:src="@{/js/jquery/jquery.min.js}"/>
-<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
-<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js/thirdparty/scripts.js}"/>
 <script th:src="@{/js/jquery/jquery.isotope.js}"/>
 <script th:src="@{/js/jquery/jquery.slicknav.js}"/>
 <script th:src="@{/js/jquery/jquery.visible.js}"/>
 <script th:src="@{/js/jquery/jquery.sticky.js}"/>
-<script th:src="@{/js//thirdparty/slimbox2.js}"/>
-<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
+<script th:src="@{/js/thirdparty/slimbox2.js}"/>
+<script th:src="@{/js/thirdparty/modernizr.custom.js}"/>
 </body>
 </html>
