--- a/src/main/resources/templates/relation/evaluation.html
+++ b/src/main/resources/templates/relation/evaluation.html
@@ -24,7 +24,7 @@
         <div class="container background-white">
             <div class="row margin-vert-30">
                 <div class="col-md-8 col-md-offset-2 col-sm-offset-3">
-                    <form class="signup-page" th:object="${evaluation}" th:action="@{relations/evaluation}"
+                    <form class="signup-page" th:object="${evaluation}" th:action="@{/relations/evaluation}"
                           method="POST">
                         <div class="signup-header">
                             <h2>Оценка репетитора за четверть</h2>
@@ -75,13 +75,13 @@
     <div th:replace="fragments/footer :: footer"></div>
 </div>
 <script th:src="@{/js/jquery/jquery.min.js}"/>
-<script th:src="@{/js//bootstrap/bootstrap.min.js}"/>
-<script th:src="@{/js//thirdparty/scripts.js}"/>
+<script th:src="@{/js/bootstrap/bootstrap.min.js}"/>
+<script th:src="@{/js/thirdparty/scripts.js}"/>
 <script th:src="@{/js/jquery/jquery.isotope.js}"/>
 <script th:src="@{/js/jquery/jquery.slicknav.js}"/>
 <script th:src="@{/js/jquery/jquery.visible.js}"/>
 <script th:src="@{/js/jquery/jquery.sticky.js}"/>
-<script th:src="@{/js//thirdparty/slimbox2.js}"/>
-<script th:src="@{/js//thirdparty/modernizr.custom.js}"/>
+<script th:src="@{/js/thirdparty/slimbox2.js}"/>
+<script th:src="@{/js/thirdparty/modernizr.custom.js}"/>
 </body>
 </html>
